feat Projects Experience: add new styles

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
 
   <footer>
     <div>
-      <p>Build by</p>
-      <h6>© 2024 Miller OC</h6>
-    </div>
-    <div>
       <p>Inspired by</p>
       <a href="https://brittanychiang.com/" target="_blank" class="brittany"><h6>Brittany Chiang</h6></a>
+    </div>
+    <div>
+      <p>Build by</p>
+      <h6>© 2024 Miller Andres OC</h6>
     </div>
   </footer>
 </body>
